--- a/docs/.vuepress/styles/index.scss
+++ b/docs/.vuepress/styles/index.scss
@@ -265,3 +265,56 @@ div[class*=language-].ext-html:before {
 .token.entity, .token.operator, .token.url {
   color: #00d187;
 }
+
+/** 一起摇摆 **/
+.wave {
+  display: inline-block;
+  transform-origin: center bottom;
+  animation:upAnimation 2.33s ease .8s 3 both;
+}
+@keyframes upAnimation {
+  0% {
+    transform: rotate(0deg);
+    transition-timing-function:cubic-bezier(0.215, .61, .355, 1);
+  }
+  10% {
+    transform: rotate(-12deg);
+    transition-timing-function:cubic-bezier(0.215, .61, .355, 1);
+  }
+  20% {
+    transform: rotate(12deg);
+    transition-timing-function:cubic-bezier(0.215, .61, .355, 1);
+  }
+  28% {
+    transform: rotate(-10deg);
+    transition-timing-function:cubic-bezier(0.215, .61, .355, 1);
+  }
+  36% {
+    transform: rotate(10deg);
+    transition-timing-function:cubic-bezier(0.755, .5, .855, .06);
+  }
+  42% {
+    transform: rotate(-8deg);
+    transition-timing-function:cubic-bezier(0.755, .5, .855, .06);
+  }
+  48% {
+    transform: rotate(8deg);
+    transition-timing-function:cubic-bezier(0.755, .5, .855, .06);
+  }
+  52% {
+    transform: rotate(-4deg);
+    transition-timing-function:cubic-bezier(0.755, .5, .855, .06);
+  }
+  56% {
+    transform: rotate(4deg);
+    transition-timing-function:cubic-bezier(0.755, .5, .855, .06);
+  }
+  60% {
+    transform: rotate(0deg);
+    transition-timing-function:cubic-bezier(0.755, .5, .855, .06);
+  }
+  100% {
+    transform: rotate(0deg);
+    transition-timing-function:cubic-bezier(0.215, .61, .355, 1);
+  }
+}
