--- a/docs/.vuepress/styles/index.scss
+++ b/docs/.vuepress/styles/index.scss
@@ -182,6 +182,62 @@ html.dark {
   }
 }
 
+// 主页按钮
+.home .hero .action-button.primary {
+  position: relative;
+  color: var(--c-text);
+  opacity: .85;
+  background-color: transparent !important;
+  border-color: transparent !important;
+  padding: 15px 5px;
+  font-size: 1.5em;
+}
+
+.home .hero .action-button.primary:hover {
+  opacity: 1;
+}
+
+.home .hero .action-button.primary:hover:after {
+  bottom: 13px;
+  left: -10%;height: 30%;
+  width: 120%;
+  background: rgba(0, 131, 255, 80%) !important;
+  animation: 1s cubic-bezier(0.67, -0.01, 0.15, 1.08) homeBtnAnim;
+}
+
+.home .hero .action-button.primary:after {
+  content: "";
+  position: absolute;
+  bottom: 5px;
+  left: 0;
+  width: 100%;
+  height: 6px;
+  background: var(--c-brand);
+  opacity: .4;
+  transition: .2s ease all;
+}
+
+@keyframes homeBtnAnim {
+  0% {
+      width: 10px;
+  }
+
+  50% {
+      width: 126%;
+  }
+
+  100% {
+  }
+}
+
+.home .features {
+  border: none;
+}
+
+.home .theme-default-content hr:first-child {
+  display: none;
+}
+
 // 用 css patch 实现 collapsible 功能 (自带的不太好用)
 // @link https://github.com/vuepress/vuepress-next/issues/397
 ul.sidebar-items {
@@ -299,16 +355,15 @@ div[class*=language-].ext-html:before {
 }
 
 #main-title .release-tag {
-  font-size: 18px;
-  font-weight: 700;
+  font-size: 15px;
   display: inline-block;
   position: absolute;
-  top: -10%;
-  padding: 3px 8px;
+  top: 10%;
+  padding: 2px 8px;
   margin-left: 10px;
   background: var(--c-brand);
   color: #fff;
-  border-radius: 4px;
+  border-radius: 3px;
 }
 
 /** 一起摇摆 **/
